--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,5 @@
 [egg_info]
 tag_build = dev
-tag_svn_revision = true
+
+[aliases]
+upload_sdist = egg_info --tag-build '' --no-svn-revision --no-date sdist upload --sign
