work on trac 0.12 compatibility

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = trac-1.0, trac-1.1, cover
+envlist = trac-1.0, trac-1.1, trac-0.12, cover, cover-compat
 
 indexserver =
     TRAC11 = http://trac.edgewall.org/wiki/TracDev/ReleaseNotes/1.1
@@ -28,11 +28,31 @@ deps =
 deps =
     {[testenv:trac-1.0]deps}
     coverage
+    unittest2
+    mock
 
 commands =
     coverage erase
     coverage run \
-        --include="authopenid/*" --omit="*/test_*" \
-        setup.py test -q
+        --include="authopenid/*" \
+        --omit="*/test_*,authopenid/compat/_*" \
+        -m unittest2 discover
+
+    coverage html
     coverage report
     #coverage report --fail-under 95
+
+[testenv:cover-compat]
+deps =
+    {[testenv:trac-0.12]deps}
+    coverage
+    unittest2
+    mock
+
+commands =
+    coverage erase
+    coverage run \
+        --include="authopenid/compat/*"  \
+        -m unittest2 discover -t . authopenid/tests/compat
+    coverage html
+    coverage report --fail-under 100
