Clean up .gitignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 *~
 *.pyc
+# setup.py turds
 /dist/
 /build/
-/TracAuthOpenId.egg-info/dependency_links.txt
-/TracAuthOpenId.egg-info/entry_points.txt
-/TracAuthOpenId.egg-info/PKG-INFO
-/TracAuthOpenId.egg-info/requires.txt
-/TracAuthOpenId.egg-info/SOURCES.txt
-/TracAuthOpenId.egg-info/top_level.txt
+/TracAuthOpenId.egg-info/
+/*.egg/
+
+# tox and coverage testing turds
+/.tox/
 /.coverage
 /cover/
-/.tox/
-/*.egg/
+/htmlcov/
+
