Beginnings of a functional test

--- a/tox.ini
+++ b/tox.ini
@@ -28,16 +28,11 @@ deps =
 deps =
     {[testenv:trac-1.0]deps}
     coverage
-    unittest2
-    mock
 
 commands =
     coverage erase
-    coverage run \
-        --include="authopenid/*" \
-        --omit="*/test_*,authopenid/compat/_*" \
-        -m unittest2 discover
-
+    coverage run --omit="*/compat/*" \
+        setup.py test -q -s authopenid.tests.unit_tests
     coverage html
     coverage report
     #coverage report --fail-under 95
@@ -46,13 +41,10 @@ commands =
 deps =
     {[testenv:trac-0.12]deps}
     coverage
-    unittest2
-    mock
 
 commands =
     coverage erase
-    coverage run \
-        --include="authopenid/compat/*"  \
-        -m unittest2 discover -t . authopenid/tests/compat
+    coverage run --include="authopenid/compat/*" \
+        setup.py test -q -s authopenid.tests.compat_tests
     coverage html
     coverage report --fail-under 100
