functional test rejigger, and test suite re-names
(test suites named things like 'unit_tests' were being discovered
and run by nosetests as tests)

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,7 @@ deps =
 commands =
     coverage erase
     coverage run --omit="*/compat/*" \
-        setup.py test -q -s authopenid.tests.unit_tests
+        setup.py test -q -s authopenid.tests.quick
     coverage html
     coverage report
     #coverage report --fail-under 95
@@ -45,6 +45,6 @@ deps =
 commands =
     coverage erase
     coverage run --include="authopenid/compat/*" \
-        setup.py test -q -s authopenid.tests.compat_tests
+        setup.py test -q -s authopenid.tests.compat.suite
     coverage html
     coverage report --fail-under 100
